fix the jquery load position

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ html lang="zh-Hant-TW"
     meta charset="utf-8"
     - if ['events/incantations'].include?(params[:controller])
       = stylesheet_link_tag    'events_incantations', media: 'all', 'data-turbolinks-track' => true
+      = javascript_include_tag 'events_incantations', 'data-turbolinks-track' => true
     - else
       = stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true
     = csrf_meta_tags
@@ -13,8 +14,6 @@ html lang="zh-Hant-TW"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
     - if ['admins', 'users', 'parties'].include?(params[:controller])
       = stylesheet_link_tag 'admin-style', 'data-turbolinks-track' => false
-    - else
-      = javascript_include_tag 'analytics', 'data-turbolinks-track' => false
     - if ['votes', 'bills', 'candidate'].include?(params[:action])
       = stylesheet_link_tag 'popup', 'data-turbolinks-track' => false
   body
@@ -33,7 +32,7 @@ html lang="zh-Hant-TW"
           = render 'layouts/footer'
           = debug(params) if Rails.env.development?
     - console if Rails.env.development?
-    - if ['events/incantations'].include?(params[:controller])
-      = javascript_include_tag 'events_incantations', 'data-turbolinks-track' => true
-    - else
+    - unless ['events/incantations'].include?(params[:controller])
       = javascript_include_tag 'application', 'data-turbolinks-track' => true
+    - unless ['admins', 'users', 'parties'].include?(params[:controller])
+      = javascript_include_tag 'analytics'
