--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -1,8 +1,8 @@
 #top
-  header id="logo"
+  header#logo
     h1 = link_to "國會調查兵團 CIC Congressional Investigation Corps", root_path
   h6 立委言行資料庫
-  nav id="first-nav"
+  nav#first-nav
     ul
       li = link_to "最新調查", recent_path
       li = link_to "找立委", legislators_search_path
@@ -10,7 +10,12 @@
       - if user_signed_in?
         li = link_to "修改密碼", edit_user_registration_path
         li = link_to '登出', destroy_user_session_path, method: :delete
-        li = link_to "兵團計畫說明", about_path
+        li = link_to "兵團計畫說明", about_path, class: "nav-info"
+        li
+          = link_to "http://shop.cic.tw/", class: "nav-donate", target: "_blank" do
+            | 贊助
+            br
+            | 兵團
         - if current_user.admin?
           li = link_to "後台首頁", admin_path
           li = link_to "影片管理", admin_videos_path
@@ -22,4 +27,9 @@
       - else
         li = link_to "加入兵團", new_user_registration_path
         li = link_to "登入", new_user_session_path
-        li = link_to "兵團計畫說明", about_path
+        li = link_to "兵團計畫說明", about_path, class: "nav-info"
+        li
+          = link_to "贊助兵團" "http://shop.cic.tw/", class: "nav-donate", target: "_blank" do
+            | 贊助
+            br
+            | 兵團
