--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -29,7 +29,7 @@
         li = link_to "登入", new_user_session_path
         li = link_to "兵團計畫說明", about_path, class: "nav-info"
         li
-          = link_to "贊助兵團" "http://shop.cic.tw/", class: "nav-donate", target: "_blank" do
+          = link_to "http://shop.cic.tw/", class: "nav-donate", target: "_blank" do
             | 贊助
             br
             | 兵團
