--- a/app/views/ccws/index.html.slim
+++ b/app/views/ccws/index.html.slim
@@ -3,7 +3,8 @@
     #title-total-data.vtitle-set
       header
         h3 立委表現比一比
-    = social_share_button_tag('立委表現比一比')
+    .fb-share
+      = social_share_button_tag('立委表現比一比')
     .inner-content-txt
       .complex-link
         .clink-01.clink
