--- a/app/views/ccws/citizen_score.html.slim
+++ b/app/views/ccws/citizen_score.html.slim
@@ -16,7 +16,8 @@
         .data-src
           | 原始資料來源：
           = link_to '公民監督國會聯盟', @ad_session.ccw_citizen_score.ccw_link, target: "_blank"
-    = social_share_button_tag("#{@ad_session.ad.name}#{@ad_session.name}公督盟公民分數排行")
+    .fb-share
+      = social_share_button_tag("#{@ad_session.ad.name}#{@ad_session.name}公督盟公民分數排行")
     .inner-content-txt
       .graphic-group
         .graphic-start
