--- a/app/views/entries/index.html.slim
+++ b/app/views/entries/index.html.slim
@@ -6,7 +6,7 @@
     - if @main_entry
       header
         h3 = link_to @main_entry.title, entry_path(@main_entry)
-      time class="time"
+      time.time
         = @main_entry.created_at.strftime('%Y-%m-%d')
       .inner-content
         = display_shorter(@main_entry.content, 75)
