--- a/app/views/interpellations/index.html.slim
+++ b/app/views/interpellations/index.html.slim
@@ -6,7 +6,7 @@
     - if @main_interpellation
       header
         h3 = link_to @main_interpellation.title, interpellation_path(@main_interpellation)
-      time class="time"
+      time.time
         = @main_interpellation.created_at.strftime('%Y-%m-%d')
       .inner-content
         = display_shorter(@main_interpellation.content, 80)
