--- a/app/views/interpellations/show.html.slim
+++ b/app/views/interpellations/show.html.slim
@@ -1,15 +1,14 @@
 #single-data-page
-  .legislators-group
-    - @interpellation.legislators.each do |l|
-      = render partial: 'shared/legislator_info', locals: { l: l }
-
-  section class="single-page-inner"
+  section.single-page-inner
     header
       h3 = @interpellation.title
-    = social_share_button_tag(@interpellation.title)
+    .fb-share
+      = social_share_button_tag(@interpellation.title)
     - @interpellation.legislators.each do |l|
       = render partial: 'shared/legislator_short_info', locals: { l: l }
-    ul id="sinner-src-list"
+    .inner-content-txt
+      = @interpellation.content.try(:html_safe)
+    ul#sinner-src-list
       - if @interpellation.interpellation_type == 'ivod'
         li
           | ivod出處：
@@ -61,16 +60,14 @@
           li
             | 質詢對象：
             = @interpellation.target
-    .inner-content-txt
-      = @interpellation.content.try(:html_safe)
-
     .writer
       span 資料回報者
       = @interpellation.user.try(:name)
       | &nbsp;
-      time class="time"
+      time.time
         = @interpellation.created_at.strftime('%Y-%m-%d')
-    aside id="writer-say"
+    aside#writer-say
+      .writer-say-title 回報者個人心得
       = @interpellation.comment.try(:html_safe)
 
     - if user_signed_in? and (@interpellation.user == current_user or current_user.admin?)
@@ -78,13 +75,5 @@
         ul class="edit-btn"
           li = link_to '修改編輯', edit_interpellation_path(@interpellation)
           li = link_to '刪除', interpellation_path(@interpellation), method: :delete, data: { confirm: '確認要刪除嗎？' }
-    #disqus_thread
-    aside id="aside-info"
-      #accordion
-        - @interpellation.legislators.each do |l|
-          - if l.interpellations.published.created_after(@interpellation.created_at).any?
-            h3 = l.name
-            div
-              ul class="news-info-list"
-                - l.interpellations.published.created_after(@interpellation.created_at).first(5).each do |q|
-                  li = link_to q.title, interpellation_path(q)
+    .reply-message
+      #disqus_thread
