--- a/app/views/legislators/interpellations.html.slim
+++ b/app/views/legislators/interpellations.html.slim
@@ -2,11 +2,11 @@
   = render partial: 'shared/legislator_info', locals: { l: @legislator }
 
 #news-show-list
-  section class="big-news-show"
+  section.big-news-show
     - if @main_interpellation
       header
         h3 = link_to @main_interpellation.title, interpellation_path(@main_interpellation)
-      time class="time"
+      time.time
         = @main_interpellation.created_at.strftime('%Y-%m-%d')
       .inner-content
         = display_shorter(@main_interpellation.content, 75)
@@ -17,10 +17,10 @@
   - if @sub_interpellations
     - @sub_interpellations.each do |e|
       #news-inner-list
-        section class="small-news-show"
+        section.small-news-show
           header
             h3 = link_to e.title, interpellation_path(e)
-          time class="time"
+          time.time
             = e.created_at.strftime('%Y-%m-%d')
           .inner-content
             = display_shorter(e.content, 75)
