--- a/app/views/legislators/show.html.slim
+++ b/app/views/legislators/show.html.slim
@@ -1,18 +1,18 @@
 #people-single-top
   .legislators-group
     = render partial: 'shared/legislator_info', locals: { l: @legislator }
-
-  section class="big-video-show"
-    - if @main_video
-      = link_to image_tag(@main_video.image), video_path(@main_video), class: "img_url_l"
-      header
-        h3 = link_to display_shorter(@main_video.title, 26), video_path(@main_video)
-      time class="time"
-        = @main_video.created_at.strftime('%Y-%m-%d')
-      .inner-content
-        = display_shorter(@main_video.content, 75)
-      = link_to "更多影片", videos_legislator_path(@legislator), class: "more mr"
-    - else
+  - if @main_videos.any?
+    - @main_videos.each do |v|
+      section.big-video-show
+        = link_to image_tag(v.image), video_path(v), class: "img_url_l"
+        header
+          h3 = link_to display_shorter(v.title, 26), video_path(v)
+        time.time
+          = v.created_at.strftime('%Y-%m-%d')
+        .inner-content
+          = display_shorter(v.content, 75)
+  - else
+    section.big-video-show
       .blank 
         | 目前尚無資料，
         = link_to "立刻回報！", report_path
@@ -21,27 +21,28 @@
   #video-list
     - if @sub_videos.any?
       - @sub_videos.each do |v|
-        section class="small-video-show"
+        section.small-video-show
           = link_to image_tag(v.image), video_path(v), class: "img_url_l"
           header
             h3 = link_to display_shorter(v.title, 26), video_path(v)
-          time class="time"
+          time.time
             = v.created_at.strftime('%Y-%m-%d')
           .inner-content
             = display_shorter(v.content, 65)
     - else
-      section class="small-video-show"
+      section.small-video-show
         .blank 
           | 目前尚無資料，
           = link_to "立刻回報！", report_path
+     = link_to "更多影片", videos_legislator_path(@legislator), class: "more mr"
 
   #news-list.side-sblock
     h3 【新聞紀錄】
     - if @entries.any?
-      = link_to "更多", entries_legislator_path(@legislator), class: "more"
       ul
         - @entries.each do |e|
           li = link_to e.title, entry_path(e)
+      = link_to "更多新聞", entries_legislator_path(@legislator), class: "more"
     - else
       .blank 
         | 目前尚無資料，
@@ -50,10 +51,10 @@
   #say-list.side-sblock
     h3 【質詢紀錄】
     - if @interpellations.any?
-      = link_to "更多", interpellations_legislator_path(@legislator), class: "more"
       ul
         - @interpellations.each do |q|
           li = link_to q.title, interpellation_path(q)
+      = link_to "更多質詢", interpellations_legislator_path(@legislator), class: "more"
     - else
       .blank 
         | 目前尚無資料，
