--- a/app/views/legislators/videos.html.slim
+++ b/app/views/legislators/videos.html.slim
@@ -2,28 +2,29 @@
   = render partial: 'shared/legislator_info', locals: { l: @legislator }
 
 #video-show-list
-  section class="big-video-show"
-    - if @main_video
-      = link_to image_tag(@main_video.image), video_path(@main_video), class: "img_url_l"
-      header
-        h3 = link_to display_shorter(@main_video.title, 26), video_path(@main_video)
-      time class="time"
-        = @main_video.created_at.strftime('%Y-%m-%d')
-      .inner-content
-        = display_shorter(@main_video.content, 75)
-    - else
-      .blank 
-        | 目前尚無資料，
-        = link_to "立刻回報！", report_path
+  - if @main_videos.any?
+    - @main_videos.each do |v|
+      section.big-video-show
+        = link_to image_tag(v.image), video_path(v), class: "img_url_l"
+        header
+          h3 = link_to display_shorter(v.title, 26), video_path(v)
+        time.time
+          = v.created_at.strftime('%Y-%m-%d')
+        .inner-content
+          = display_shorter(v.content, 75)
+  - else
+    .blank 
+      | 目前尚無資料，
+      = link_to "立刻回報！", report_path
   #video-list
     - if @sub_videos
       - @sub_videos.each do |v|
         #video-inner-list
-          section class="small-video-show"
+          section.small-video-show
             = link_to image_tag(v.image), video_path(v), class: "img_url_l"
             header
               h3 = link_to display_shorter(v.title, 26), video_path(v)
-            time class="time"
+            time.time
               = v.created_at.strftime('%Y-%m-%d')
             .inner-content
               = display_shorter(v.content, 65)
