--- a/templete/css/style.css
+++ b/templete/css/style.css
@@ -73,24 +73,6 @@ height:60px;}
 #first-nav li a:hover{
 color:#E60012;
 }
-
-#first-nav li .nav-donate{
-	position: fixed;
-	right: 0;
-	bottom: 0;
-	background-color: #E60012;
-	color: #fff;
-	display: block;
-	text-align: center;
-	padding: 10px 15px;
-	font-size: 24px;
-	z-index: 999;
-}
-#first-nav li .nav-donate:hover{
-	color: #fff;
-}
-
-
 #index-video-block{
 	overflow:hidden;
 	background:#f3f3f3;
@@ -2827,7 +2809,9 @@ margin:0 10px 0 0;
 	margin:0 0 0 -1px ;
 	}
 
-.nav-login
+#first-nav li a{
+padding:7px 10px;		
+	}
 /*首頁*/
 	#index-main-video{
 	max-width:630px;
@@ -3074,10 +3058,17 @@ padding-top:19.5%;}
 	#book-sell a:nth-child(3){
 		display:block;}
 /*表頭*/
-#first-nav li a.nav-info{
-		display: none;
+#first-nav{
+	width:auto;}
+#first-nav li{
+	float:none;
+	display:block;
+	border:1px solid #ccc;
+	margin:0px 0 -1px 0 ;
+	text-align:center;
 	}
-
+#first-nav li a{
+	display:block;}
 #top h6{
 	width:150px;
 	top:19px;}
@@ -3282,5 +3273,4 @@ padding:5px;}
 	width:63%;}
 	.info-number{
 	width:66%;}
-
 }
