--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -23,6 +23,7 @@
           li = link_to "新聞管理", admin_entries_path
           li = link_to "數據管理", admin_data_path
           li = link_to "政黨管理", parties_path
+          li = link_to "關鍵字管理", keywords_path
           li = link_to "會員管理", users_path
       - else
         li = link_to "加入兵團", new_user_registration_path
