--- a/app/views/keywords/edit.html.slim
+++ b/app/views/keywords/edit.html.slim
@@ -1,4 +1,5 @@
 #sys-block
   h2 編輯關鍵字
-  = simple_form_for(@keyword) do |f|
-    = render :partial => 'form', :locals => { :f => f }
+  .inner-list
+    = simple_form_for(@keyword) do |f|
+      = render :partial => 'form', :locals => { :f => f }
