--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -12,7 +12,7 @@ html lang="zh-Hant-TW"
     /[if lt IE9]
       script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"
     meta name="viewport" content="width=device-width, initial-scale=1.0"
-    - if ['admins', 'users', 'parties'].include?(params[:controller])
+    - if ['admins', 'users', 'parties', 'keywords'].include?(params[:controller])
       = stylesheet_link_tag 'admin-style', 'data-turbolinks-track' => false
     - if ['votes', 'bills', 'candidate'].include?(params[:action])
       = stylesheet_link_tag 'popup', 'data-turbolinks-track' => false
