fix the open source url

--- a/app/views/static_pages/opensource.html.slim
+++ b/app/views/static_pages/opensource.html.slim
@@ -13,7 +13,7 @@
     p
       | 國會調查兵團網站原始碼以MIT授權釋出：
       br
-      = link_to "https://github.com/billy3321/cic-website", "https://github.com/billy3321/cic-website", target: "_blank"
+      = link_to "https://github.com/cic-tw/cic-website", "https://github.com/cic-tw/cic-website", target: "_blank"
       br
       | 詳細授權說明請見「
       = link_to "會員條款", service_path
