--- a/app/views/entries/_form.html.slim
+++ b/app/views/entries/_form.html.slim
@@ -33,7 +33,7 @@ ul class="form-list"
       | 請填寫新聞文字內容作為備份。您填寫的新聞內容備份會儲存在本網站資料庫，但礙於著作權法的規定，新聞內容將不會在頁面上顯示出來。
       = link_to "可以回報新聞影片嗎>>", tutorial_path, target: "_blank"
       br
-    p = f.cktext_area :content, label: false, required: true
+    p = f.cktext_area :content, label: false, required: true, input_html: { class: 'ckeditor' }
   - if user_signed_in? and current_user.admin?
     li
       p 是否允許發佈
