--- a/app/views/videos/_form.html.slim
+++ b/app/views/videos/_form.html.slim
@@ -65,7 +65,7 @@ ul.form-list
     p = f.input :date, as: :string, input_html: { class: "datepicker" }, label: false
   li
     p 簡介
-    p = f.cktext_area :content, label: false, input_html: { class: 'ckeditor' }
+    p = f.cktext_area :content, label: false, class: 'ckeditor'
   - if user_signed_in? and current_user.admin?
     li
       p 是否允許發佈
