fix votes page error because of syntax error

--- a/app/views/legislators/votes.html.slim
+++ b/app/views/legislators/votes.html.slim
@@ -94,7 +94,7 @@
               - if p == @current_page
                 span.page.current = p
               - else
-                span.page = link_to p, url_for(page: p}))
+                span.page = link_to p, url_for(page: p)
       - else
         .api-dead-block
           | 唉呀！目前從立委投票指南抓取資料失敗，如果想要瀏覽相關資料請直接至立委投票指南查看。
