--- a/app/views/static_pages/opensource.html.slim
+++ b/app/views/static_pages/opensource.html.slim
@@ -19,6 +19,4 @@
       = link_to "會員條款", service_path
       | 」之四、智慧財產權保護
     p
-      | 網站內容開放API界接，API文件可
-      = link_to "在此取得", api_path, target: "_blank"
-      | 。
+      | 網站內容開放API介接，API文件目前仍在製作，敬請期待。
