fix css image url

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -1386,13 +1386,13 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#a1a1a1', end
 .legislators-more-info li a{
 	padding:3px 0 3px 20px;}
 #lmi-01 a{
-	background:url(../images/lmi-01.png) no-repeat left center;}
+	background:image-url('lmi-01.png') no-repeat left center;}
 #lmi-02 a{
-	background:url(../images/lmi-02.png) no-repeat left center;}
+	background:image-url('lmi-02.png') no-repeat left center;}
 #lmi-03 a{
-	background:url(../images/lmi-03.png) no-repeat left center;}
+	background:image-url('lmi-03.png') no-repeat left center;}
 #lmi-04 a{
-	background:url(../images/lmi-04.png) no-repeat left center;}
+	background:image-url('lmi-04.png') no-repeat left center;}
 .legislators-more-info .lmib-02 li a{
 	padding:0px;
 	width:28px;
