fix the css and style

--- a/app/views/layouts/_header.html.slim
+++ b/app/views/layouts/_header.html.slim
@@ -6,11 +6,10 @@
     ul
       li = link_to "最新調查", recent_path
       li = link_to "找立委", legislators_search_path
-      li = link_to "回報立委資訊", report_path
       - if user_signed_in?
         li = link_to "修改密碼", edit_user_registration_path
         li = link_to '登出', destroy_user_session_path, method: :delete
-        li = link_to "兵團計畫說明", about_path, class: "nav-info"
+        li = link_to "兵團計畫說明", about_path
         li
           = link_to "贊助兵團", "http://shop.cic.tw/", class: "nav-donate", target: "_blank"
         - if current_user.admin?
@@ -23,8 +22,8 @@
           li = link_to "關鍵字管理", keywords_path
           li = link_to "會員管理", users_path
       - else
-        li = link_to "加入兵團", new_user_registration_path
         li = link_to "登入", new_user_session_path
-        li = link_to "兵團計畫說明", about_path, class: "nav-info"
+        li = link_to "加入兵團", new_user_registration_path
+        li = link_to "兵團計畫說明", about_path
         li
           = link_to "贊助兵團", "http://shop.cic.tw/", class: "nav-donate", target: "_blank"
